# ChangeLog for dev-java/oracle-jdk-bin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.13 2012/02/18 15:06:51 phajdan.jr Exp $

  18 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  oracle-jdk-bin-1.7.0.3.ebuild:
  x86 stable wrt bug #404071

*oracle-jdk-bin-1.7.0.3 (16 Feb 2012)

  16 Feb 2012; Ralph Sennhauser <sera@gentoo.org>
  -oracle-jdk-bin-1.7.0.1-r1.ebuild, -oracle-jdk-bin-1.7.0.1-r2.ebuild,
  -oracle-jdk-bin-1.7.0.2.ebuild, +oracle-jdk-bin-1.7.0.3.ebuild:
  Security bump. #404071
  Use relative path for desktop file icon. #403139
  Make installation of src.zip optional as for other JDKs.
  Unzip is build only dependency.
  Remove vulnerable.

  27 Jan 2012; Ralph Sennhauser <sera@gentoo.org>
  oracle-jdk-bin-1.7.0.2.ebuild:
  Add basename to dosym target

  18 Dec 2011; Ralph Sennhauser <sera@gentoo.org>
  oracle-jdk-bin-1.7.0.2.ebuild:
  Fix USE=examples

*oracle-jdk-bin-1.7.0.2 (18 Dec 2011)

  18 Dec 2011; Ralph Sennhauser <sera@gentoo.org>
  +oracle-jdk-bin-1.7.0.2.ebuild:
  Version bump. #394581

  15 Dec 2011; Fabian Groffen <grobian@gentoo.org>
  oracle-jdk-bin-1.7.0.1-r2.ebuild:
  Add support for Solaris, added Prefix keywords

  21 Nov 2011; Ralph Sennhauser <sera@gentoo.org>
  oracle-jdk-bin-1.7.0.1-r1.ebuild, oracle-jdk-bin-1.7.0.1-r2.ebuild:
  Use java-vm-2.eclass to set PaX markings

*oracle-jdk-bin-1.7.0.1-r2 (17 Nov 2011)

  17 Nov 2011; Vlastimil Babka <caster@gentoo.org>
  +oracle-jdk-bin-1.7.0.1-r2.ebuild, files/oracle-jdk-bin-1.7.env:
  Revbump to make the LDPATH variable useful for building JNI libraries (as
  used by lwjgl) instead of the bogus directories in java.library.path.

  12 Nov 2011; Ralph Sennhauser <sera@gentoo.org> -oracle-jdk-bin-1.7.0.ebuild,
  -oracle-jdk-bin-1.7.0.1.ebuild:
  Remove old/vulnarable

  12 Nov 2011; Ralph Sennhauser <sera@gentoo.org>
  oracle-jdk-bin-1.7.0.1-r1.ebuild: