@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX fontconfig.Gentoo.properties 11196 RMD160 e11989b6be27297af68bdd7040439f4d3bd09916 SHA1 58a53f90a8d0409769d371f2e07b5bec27b02469 SHA256 9372ca516ff36609d846a9cb446dde3212e976c10166d8e231312d6238d1db0c
 AUX oracle-jdk-bin-1.7.env 1000 RMD160 9067112ce8a31b450755ce6bbcdd1b24d5307e12 SHA1 66d5a3df445baded9d2b16fc7f24d8fcb1c340bd SHA256 a2422630fc1dd9851b580e42b065d44460d9ec818b203836687e67b2ab4f1c0f
@@ -16,13 +16,17 @@ DIST jdk-7u3-solaris-sparcv9-demos.tar.gz 199207 RMD160 9d5aceb3d9f7fa0135175e35
 DIST jdk-7u3-solaris-sparcv9.tar.gz 12904146 RMD160 cf8460e1ae7d2e66a59ac757501aaa4ec4c5389f SHA1 b87af612e7dc095445a33b6692501a2210be8e43 SHA256 04811e46ece37dd99c874b9998cbc9251dd886c5ffe1536548b396b8c51f5dc9
 DIST jdk-7u3-solaris-x64-demos.tar.gz 186051 RMD160 0003fcca02d1d6a8c2970941bea64ee9ab8f2d67 SHA1 8742a6cc3fc9a0989839da1a8b862730f9047361 SHA256 063cf73e7d5b366c8de33f8af7ad01895eabf9b146458cf497c0015f4bf9faa0
 DIST jdk-7u3-solaris-x64.tar.gz 9702437 RMD160 81427666473e5491fd64d8e539e2e4c1edba6cb2 SHA1 e5903a8afa28b1b25f9bd71e1463da57fc24c163 SHA256 1021b777004c0acc9e7e7dc1006afb46379daa79d88285f95b2ff096fa527ea2
-EBUILD oracle-jdk-bin-1.7.0.3.ebuild 6609 RMD160 52b593640d17718acc6427c3dc8a709d22b753cb SHA1 1d6732f227b59f9ad95eb3a9de4c83becc019d68 SHA256 f3f393ced9b004b84d66d28d8acf097780859b406ad19dda4ff4a14fa2fbbe25
-MISC ChangeLog 2719 RMD160 1453e6e90f748a319e21f5ee1cd2a28fce9ef6bb SHA1 0a5fd5c1aa4706d4035cd4da4949020b0091a3a8 SHA256 e5aecf17de4a2be6d2c6a89079842e2c159e795dcf04f8e8828f29b986f524a6
+EBUILD oracle-jdk-bin-1.7.0.3.ebuild 10656 RMD160 526376b2a1145d2373f7bf2a0d9a694a1e66f351 SHA1 163cc4992e2e6adf813e041913a9a9eb58789a58 SHA256 c6acdcc09c8b23d974e790cbbc683990b0c726191f433cd3ae89d947bf9a11fc
+MISC ChangeLog 2829 RMD160 d7040f3799e4d02715b9d3d28da66eeee38df0d9 SHA1 ae80bd079e13de614f654d97235de54d187074ca SHA256 8813604a88a5fea493e6acca6dc54b33253dee88055f657d07c738762217824d
 MISC metadata.xml 447 RMD160 7d545e68fa24d3775c670d42dc2fae9a125f64a0 SHA1 be889d874ad2ab4f6a4be68ed2a33909c03ed1a2 SHA256 7f8266bbb1afdd6dcd6361bca86fc8178ce623c042a3eac3835bcbf03b6b9232
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8/vpEACgkQuUQtlDBCeQLK3QCdFvj1GVj9vPBU4CvzmkWfaI6t
-g5IAn2/cwVI9CnOn/KhCfiEwq8Larwrh
-=/soS
+iQEcBAEBAgAGBQJPpUKZAAoJEIUJ+svaV163D5gH/Aq6NG5T0//zrJf7UDnZwngP
+g0sUi16B5G5A56sagCLTqAbdKRoDp1gAc99dj2VhvhjCZvHZ1s018j0hP6cxvgQa
+dnGRgki4Rh0IcBnWhsgbSUZls1wtv9gmk6aVVEYdi9JURZaHomouwi46Q45MFkPr
+he/JH8DlrSY+nUbDDp4VgeLACiIuGo3eJe7xpBqHz1X3WY23ElWsyU33w2TwMmRY
+QZnKR7gbUQmUGGwusWKdw+j2LoQlKOJGOwXVugBlPXQKZ9M0mRLEbKX55GrFfA5J
+YpmTahBMkEIBjaSFZ69vvvrS5dKqzjZZUmdQWCuBMPv/1dJHWnaIcsQYysbiyok=
+=ziTk
 -----END PGP SIGNATURE-----
