@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/oracle-jdk-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.13 2012/02/18 15:06:51 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.14 2012/05/05 15:08:57 sera Exp $
+
+  05 May 2012; Ralph Sennhauser <sera@gentoo.org>
+  oracle-jdk-bin-1.7.0.3.ebuild:
+  Add QA_FLAGS_IGNORED. #405639
 
   18 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   oracle-jdk-bin-1.7.0.3.ebuild:
